fix(images): add docker.io prefix to repository for CRI-O 1.34 compatibility
Signed-off-by: Paris Nakita Kejser <hi@pnk.sh>

--- a/deployments/helm/KubeArmorOperator/values.yaml
+++ b/deployments/helm/KubeArmorOperator/values.yaml
@@ -33,7 +33,7 @@ kubearmorOperator:
   annotateExisting: false
   name: kubearmor-operator
   image:
-    repository: kubearmor/kubearmor-operator
+    repository: docker.io/kubearmor/kubearmor-operator
     tag: ""
     # Optional, but if there are a lot of image pulls required, Docker might be rate-limited. So, it's good to add pull secrets for production.
     imagePullSecrets: []
