--- a/KubeArmor/.goreleaser.yaml
+++ b/KubeArmor/.goreleaser.yaml
@@ -27,16 +27,14 @@ checksum:
 signs:
   - cmd: cosign
     certificate: '${artifact}.cert'
+    signature: "${artifact}.sigstore.json"
     args:
       - sign-blob
-      - '--output-certificate=${certificate}' 
-      - '--output-signature=${signature}'
+      - "--bundle=${signature}"
       - '${artifact}'
-      - '--bundle=false'
       - --yes
     artifacts: all
     output: true
-
 archives:
   - id: "kubearmor"
     builds:
