test(ci): improve systemd test workflow to support code coverage
Signed-off-by: Gaurav Deep <gauravdeep8660@gmail.com>

--- a/.github/workflows/ci-test-systemd.yml
+++ b/.github/workflows/ci-test-systemd.yml
@@ -38,33 +38,88 @@ jobs:
       - name: Compile libbpf
         run: ./.github/workflows/install-libbpf.sh
 
-      - name: Install GoReleaser
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          install-only: true
-          version: v1.25.0
-
       - name: Install protoc
         run: |
+          sudo apt-get update
+          sudo apt-get install -y protobuf-compiler
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
-    
-      - name: Build Systemd Release
-        run: make local-release
-        working-directory: KubeArmor
 
-      - name: Install KubeArmor
-        run: sudo apt install -y ./dist/kubearmor*amd64.deb
+      - name: Build Coverage Test Binary
         working-directory: KubeArmor
+        run: make build-coverage
 
-      - name: Check journalctl
-        run: sudo journalctl -u kubearmor --no-pager
-      
-      - name: Test kubearmor using ginkgo 
+      - name: Run KubeArmor
+        working-directory: KubeArmor
+        run: |
+          REPO_ROOT="$(pwd)"
+          CONFIG_PATH="$REPO_ROOT/packaging/kubearmor.yaml"
+
+          echo "Using config: $CONFIG_PATH"
+          test -f "$CONFIG_PATH" && echo "Config file found" || (echo "Config file NOT found!" && exit 1)
+
+          sudo env KUBEARMOR_CFG="$CONFIG_PATH" \
+              ./kubearmor \
+              -logPath=/tmp/kubearmor.log \
+              -test.coverprofile=systemd_coverage.out \
+              > /tmp/kubearmor.out 2>&1 &
+
+          echo $! > kubearmor.pid
+          echo "KubeArmor PID: $(cat kubearmor.pid)"
+
+          sleep 15
+
+      - name: Test KubeArmor using Ginkgo
+        working-directory: ./tests/nonk8s_env
         run: |
           go install -mod=mod github.com/onsi/ginkgo/v2/ginkgo
           make
-        working-directory: ./tests/nonk8s_env
         timeout-minutes: 30
-        
-      
+
+      - name: Stop KubeArmor
+        working-directory: KubeArmor
+        if: always()
+        run: |
+          echo "KubeArmor Process:"
+          ps aux | grep kubearmor
+
+          sudo pkill kubearmor
+
+          for i in {1..30}; do
+            if [ ! -f kubearmor.pid ]; then break; fi
+            if ! ps -p $(cat kubearmor.pid) > /dev/null; then break; fi
+            sleep 1
+          done
+          rm -f kubearmor.pid || true
+
+      - name: Measure code coverage
+        working-directory: KubeArmor
+        if: always()
+        run: |
+          ls -l .
+          for i in {1..5}; do
+            if [ -f systemd_coverage.out ]; then
+              go tool cover -func systemd_coverage.out
+              break
+            fi
+            echo "systemd_coverage.out not found yet, retrying ($i/5)..."
+            sleep 5
+          done
+
+      - name: Archive log artifacts
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: runtime_logs
+          path: |
+            /tmp/kubearmor.*
+          if-no-files-found: ignore
+
+      - name: Upload Coverage
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage_reports
+          path: |
+            KubeArmor/systemd_coverage.out
+          if-no-files-found: ignore
