--- a/KubeArmor/Makefile
+++ b/KubeArmor/Makefile
@@ -35,6 +35,23 @@ endif
 endif
 	cd $(CURDIR); CGO_ENABLED=0 go build -ldflags "$(GIT_INFO)" -o kubearmor main.go
 
+.PHONY: build-coverage
+build-coverage: protobuf
+	cd $(CURDIR); go mod tidy
+ifneq (, $(shell which bpftool))
+ifneq (, $(wildcard /sys/kernel/btf/vmlinux))
+	cd $(CURDIR); bpftool btf dump file /sys/kernel/btf/vmlinux format c > BPF/vmlinux.h || true
+endif
+ifneq (, $(shell which llvm-strip))
+	if grep -q bpf '/sys/kernel/security/lsm'; then \
+		cd $(CURDIR); go generate ./... || true; \
+	fi
+endif
+endif
+	cd $(CURDIR); CGO_ENABLED=0 go test -covermode=atomic -coverpkg=./... -c . -ldflags "$(GIT_INFO)" -o kubearmor
+	cd $(CURDIR)/BPF; make clean
+	cd $(CURDIR)/BPF; make
+
 .PHONY: protobuf
 protobuf:
 	cd $(CURDIR); make -C ../protobuf
